# memetus-token-scraper

./: .gitignore  README.md  pyproject.toml
config/: selenium_config.py
core/dexscreener/: get_token_info.py
core/geckoterminal/: get_scrap.py
core/memetus/: get_data.py
core/twitter/: analyze_token.py  scrap_account.py  search_token.py
interface/: opinion_type.py  token_type.py
libs/: news_scraper.py  report_by_json.py  report_by_search.py  report_generator.py
selenium/: get_selenium_driver.py
utils/error/: argv_error.py  error.py  request_error.py  tweepy_error.py
utils/formatter/: csv_to_json.py  json_to_jsonl.py
utils/image/: img_hdr.py
utils/parser/: argv_parser.py  prompt_parser.py  url_parser.py
utils/writer/: analyze_json_writer.py  item_json_writer.py  json_writer.py  search_json_writer.py
