[tool.poetry]
name = "token-scraper-tool"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
google-search-results = "^2.4.2"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.12.3"
uuid = "^1.30"
selenium = "^4.27.1"
seleniumbase = "^4.33.12"
tweepy = "^4.14.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
