[tool.poetry]
name = "token-scraper-tool"
version = "0.1.0"
description = ""
authors = ["resister-boy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
google-search-results = "^2.4.2"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.12.3"
uuid = "^1.30"
selenium = "^4.27.1"
seleniumbase = "^4.33.12"
tweepy = "^4.14.0"
python-dotenv = "^1.0.1"
openai = "^1.59.2"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
langchainhub = "^0.1.21"
langgraph = "^0.2.60"
langsmith = "^0.2.7"
langchain-openai = "^0.2.14"
langchain-text-splitters = "^0.3.4"
langchain-cohere = "^0.3.4"
langchain-milvus = "^0.1.7"
tavily-python = "^0.5.0"
langchain-experimental = "^0.3.4"
python-docx = "^1.1.2"
pydantic = "^2.10.4"
charset-normalizer = "^3.4.1"
kagglehub = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
